{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 205,
  "lineage": "3ce66df5-4bb6-7fee-f5e9-d5672121458d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:security-group/sg-09d3175095fa71517",
            "description": "Allow frontend to access the backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d3175095fa71517",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e612c4e07e559a41"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "805649859294",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend_sg"
            },
            "tags_all": {
              "Name": "backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-098c8a24cfc128930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "sg-09d3175095fa71517",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:security-group/sg-08d345c933d48a209",
            "description": "Allow access database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d345c933d48a209",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d3175095fa71517"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "805649859294",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_sg"
            },
            "tags_all": {
              "Name": "database_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-098c8a24cfc128930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "sg-08d345c933d48a209",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:security-group/sg-0e612c4e07e559a41",
            "description": "Allow http inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e612c4e07e559a41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend_sg",
            "name_prefix": "",
            "owner_id": "805649859294",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend_sg"
            },
            "tags_all": {
              "Name": "frontend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-098c8a24cfc128930"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "sg-0e612c4e07e559a41",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:subnet/subnet-0ddcf59689adcb7c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddcf59689adcb7c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805649859294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iti - private subnet - 1",
              "project": "test"
            },
            "tags_all": {
              "Name": "iti - private subnet - 1",
              "project": "test"
            },
            "vpc_id": "vpc-098c8a24cfc128930"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "subnet-0ddcf59689adcb7c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:subnet/subnet-038846c92c27d239f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038846c92c27d239f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805649859294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iti - private subnet - 2",
              "project": "test"
            },
            "tags_all": {
              "Name": "iti - private subnet - 2",
              "project": "test"
            },
            "vpc_id": "vpc-098c8a24cfc128930"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "subnet-038846c92c27d239f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805649859294:vpc/vpc-098c8a24cfc128930",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-053bee6474d0b67f8",
            "default_route_table_id": "rtb-0b46a26ae74c85255",
            "default_security_group_id": "sg-0c1e01046331b8b3c",
            "dhcp_options_id": "dopt-08bbdf1f726c83de5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098c8a24cfc128930",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b46a26ae74c85255",
            "owner_id": "805649859294",
            "region": "us-east-1",
            "tags": {
              "Name": "iti - vpc main",
              "project": "test"
            },
            "tags_all": {
              "Name": "iti - vpc main",
              "project": "test"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "805649859294",
            "id": "vpc-098c8a24cfc128930",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}